# otus.lessons.12.01

./: .gitignore  .travis.yml  otus.lessons.12.01.sln
docker/: Dockerfile  docker.sh
otus.lessons.12.01/: main.cpp  otus.lessons.12.01.cpp  otus.lessons.12.01.vcxproj  otus.lessons.12.01.vcxproj.filters  sparce_matrix.h  stdafx.cpp
src/: CMakeLists.txt  in.version.h  main.cpp  otus.lessons.12.01.vcxproj  otus.lessons.12.01.vcxproj.filters  sparse_matrix.h  stdafx.cpp  stdafx.h  test.cpp
